Formulario de historia clinica

--- a/frontend/SAMI/src/app/views/vista-paciente/vista-paciente.component.html
+++ b/frontend/SAMI/src/app/views/vista-paciente/vista-paciente.component.html
@@ -3,7 +3,9 @@
   <div class="dashboard-content">
     <header>
       <h1>Gestión de pacientes</h1>
-      <button class="add-history">+ Nueva historia</button>
+      <a href="/historia-clinica">
+        <button class="add-history">+ Nueva historia</button></a
+      >
     </header>
 
     <div class="patient-data-container">
